Feat(be): Add endpoint to set DHCP client for an interface
